task-42/templates/mysql-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: mysql
  namespace: task1
  labels:
    app: mysql
spec:
  containers:
  - name: mysql
    image: mysql:5.7
    ports:
    - containerPort: 3306
